--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ES 6 | Playground</title>
-    <script src="./main.js"></script>
+    <!-- <script src="./forEach.js"></script> -->
+    <script src="./map.js"></script>
 </head>
 <body>
     <p id="fillName"></p>
