--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ES 6 | Playground</title>
     <!-- <script src="./forEach.js"></script> -->
-    <script src="./map.js"></script>
+    <!-- <script src="./map.js"></script> -->
+    <script src="./filter.js"></script>
 </head>
 <body>
     <p id="fillName"></p>
