es6 find helper

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>ES 6 | Playground</title>
     <!-- <script src="./forEach.js"></script> -->
     <!-- <script src="./map.js"></script> -->
-    <script src="./filter.js"></script>
+    <!-- <script src="./filter.js"></script> -->
+    <script src="./find.js"></script>
 </head>
 <body>
     <p id="fillName"></p>
