--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- <script src="./forEach.js"></script> -->
     <!-- <script src="./map.js"></script> -->
     <!-- <script src="./filter.js"></script> -->
-    <script src="./find.js"></script>
+    <!-- <script src="./find.js"></script> -->
+    <script src="./every-sum.js"></script>
 </head>
 <body>
     <p id="fillName"></p>
