es6 reduce function test task

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- <script src="./map.js"></script> -->
     <!-- <script src="./filter.js"></script> -->
     <!-- <script src="./find.js"></script> -->
-    <script src="./every-sum.js"></script>
-    <!-- <script src="./reduce.js"></script> -->
+    <!-- <script src="./every-sum.js"></script> -->
+    <script src="./reduce.js"></script>
 </head>
 <body>
     <p id="fillName"></p>
