es6 template literals

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <!-- <script src="./filter.js"></script> -->
     <!-- <script src="./find.js"></script> -->
     <!-- <script src="./every-sum.js"></script> -->
-    <script src="./reduce.js"></script>
+    <!-- <script src="./reduce.js"></script> -->
+    <!-- <script src="./const-let-var.js"></script> -->
+    <script src="./template-string.js"></script>
 </head>
 <body>
     <p id="fillName"></p>
