es6 arrow function example

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="./every-sum.js"></script> -->
     <!-- <script src="./reduce.js"></script> -->
     <!-- <script src="./const-let-var.js"></script> -->
-    <script src="./template-string.js"></script>
+    <!-- <script src="./template-string.js"></script> -->
+    <script src="./arrow-function.js"></script>
 </head>
 <body>
     <p id="fillName"></p>
