es6 arrow function another example with lexical scoping

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <!-- <script src="./reduce.js"></script> -->
     <!-- <script src="./const-let-var.js"></script> -->
     <!-- <script src="./template-string.js"></script> -->
-    <script src="./arrow-function.js"></script>
+    <!-- <script src="./arrow-function.js"></script> -->
+    <script src="./object-literals.js"></script>
 </head>
 <body>
     <p id="fillName"></p>
 </body>
+
 </html>
