--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="./const-let-var.js"></script> -->
     <!-- <script src="./template-string.js"></script> -->
     <!-- <script src="./arrow-function.js"></script> -->
-    <script src="./object-literals.js"></script>
+    <!-- <script src="./object-literals.js"></script> -->
+    <script src="./function-arguments.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
