es6 rest operators

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- <script src="./template-string.js"></script> -->
     <!-- <script src="./arrow-function.js"></script> -->
     <!-- <script src="./object-literals.js"></script> -->
-    <script src="./function-arguments.js"></script>
+    <!-- <script src="./function-arguments.js"></script> -->
+    <script src="./rest-spread.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
