--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- <script src="./arrow-function.js"></script> -->
     <!-- <script src="./object-literals.js"></script> -->
     <!-- <script src="./function-arguments.js"></script> -->
-    <script src="./rest-spread.js"></script>
+    <!-- <script src="./rest-spread.js"></script> -->
+    <script src="./destructuring.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
