--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- <script src="./object-literals.js"></script> -->
     <!-- <script src="./function-arguments.js"></script> -->
     <!-- <script src="./rest-spread.js"></script> -->
-    <script src="./destructuring.js"></script>
+    <!-- <script src="./destructuring.js"></script> -->
+    <script src="./classes.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
