--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="./function-arguments.js"></script> -->
     <!-- <script src="./rest-spread.js"></script> -->
     <!-- <script src="./destructuring.js"></script> -->
-    <script src="./classes.js"></script>
+    <!-- <script src="./classes.js"></script> -->
+    <script src="./generators.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
