--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
 </head>
 <body>
     <p id="fillName"> </p>
+
+    <div class="foo"></div>
+    <div class="foo"></div>
+    <div class="foo"></div>
 </body>
 </html>
