ES6: Generators example

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     <div class="foo"></div>
     <div class="foo"></div>
     <div class="foo"></div>
+
+    <a href="https://wa.me/919895599525">Send Message</a>
+
 </body>
 </html>
