ES6: Generators example

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- <script src="./destructuring.js"></script> -->
     <!-- <script src="./classes.js"></script> -->
     <!-- <script src="./generators.js"></script> -->
-    <script src="./generators-extended.js"></script>
+    <!-- <script src="./generators-extended.js"></script> -->
+    <script src="./promises.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
