--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!-- <script src="./classes.js"></script> -->
     <!-- <script src="./generators.js"></script> -->
     <!-- <script src="./generators-extended.js"></script> -->
-    <script src="./promises.js"></script>
+    <!-- <script src="./promises.js"></script> -->
+    <script src="./revise-es6.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
@@ -28,8 +29,5 @@
     <div class="foo"></div>
     <div class="foo"></div>
     <div class="foo"></div>
-
-    <a href="https://wa.me/919895599525">Send Message</a>
-
 </body>
 </html>
