--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!-- <script src="./generators.js"></script> -->
     <!-- <script src="./generators-extended.js"></script> -->
     <!-- <script src="./promises.js"></script> -->
-    <script src="./revise-es6.js"></script>
+    <!-- <script src="./revise-es6.js"></script> -->
+    <script src="./react-classes.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
