--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- <script src="./generators-extended.js"></script> -->
     <!-- <script src="./promises.js"></script> -->
     <!-- <script src="./revise-es6.js"></script> -->
-    <script src="./react-classes.js"></script>
+    <!-- <script src="./react-classes.js"></script> -->
+    <script src="./prep.js"></script>
 </head>
 <body>
     <p id="fillName"> </p>
